Ultrathink rewrite migration plan